--- a/.github/workspace/zomato-ci.yaml
+++ b/.github/workspace/zomato-ci.yaml
@@ -28,7 +28,7 @@ jobs:
         run: |
           iwr -Uri "https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.50.0_Windows-64bit.zip" -OutFile "trivy.zip"
           Expand-Archive -Path "trivy.zip" -DestinationPath "C:\trivy"
-          echo "C:\trivy" | Out-File -Append -Encoding ascii $env:GITHUB_PATH
+          Add-Content -Path $env:GITHUB_PATH -Value "C:\trivy"
 
       - name: Run Trivy Security Scan
         run: C:\trivy\trivy.exe fs --exit-code 0 --severity HIGH,CRITICAL --format table --output trivy-report.txt .
@@ -37,7 +37,7 @@ jobs:
         run: |
           Invoke-WebRequest -Uri "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-windows.zip" -OutFile "sonar.zip"
           Expand-Archive -Path "sonar.zip" -DestinationPath "C:\sonar-scanner"
-          echo "C:\sonar-scanner\sonar-scanner-5.0.1.3006-windows\bin" | Out-File -Append -Encoding ascii $env:GITHUB_PATH
+          Add-Content -Path $env:GITHUB_PATH -Value "C:\sonar-scanner\sonar-scanner-5.0.1.3006-windows\bin"
 
       - name: SonarQube Analysis
         env:
@@ -46,14 +46,13 @@ jobs:
           sonar-scanner.bat ^
             -Dsonar.projectKey=zomato ^
             -Dsonar.projectName=zomato ^
-            -Dsonar.host.url=http://localhost:9000 ^
-            -Dsonar.token=%SONAR_TOKEN%
+            -Dsonar.token=%SONAR_TOKEN%  # Removed -Dsonar.host.url (Use SonarCloud)
 
       - name: Log in to Docker Hub
         run: echo ${{ secrets.DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t $env:DOCKER_IMAGE .
+        run: docker build -t devopsship/zomato:latest .
 
       - name: Push Docker Image to Docker Hub
-        run: docker push $env:DOCKER_IMAGE
+        run: docker push devopsship/zomato:latest
