--- a/.github/workspace/zomato-ci.yaml
+++ b/.github/workspace/zomato-ci.yaml
@@ -7,8 +7,15 @@ on:
 
 jobs:
   checkout-code:
-    runs-on: ubuntu-latest  # Using Linux runner
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]  # Runs on both Linux and Windows
+
+    runs-on: ${{ matrix.os }}  # Dynamically runs on each OS
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4  # Fetches the repository code
+
+      - name: Display Operating System
+        run: echo "Running on ${{ runner.os }}"
