--- a/.github/workflows/zomato-ci.yaml
+++ b/.github/workflows/zomato-ci.yaml
@@ -1,30 +1,51 @@
-name: Zomato CI - Checkout & Setup Node.js
+name: Zomato CI - SonarQube Integration
 
 on:
   push:
     branches:
-      - feature-zomato  # Runs only when code is pushed to feature-zomato branch
+      - feature-zomato  # Runs only for feature-zomato branch
 
 jobs:
-  setup-node:
+  sonar-analysis:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]  # Runs only on Linux & Windows
+        os: [ubuntu-latest, windows-latest]  # Run on Linux & Windows
 
-    runs-on: ${{ matrix.os }}  # Dynamically selects Linux or Windows
+    runs-on: ${{ matrix.os }}
+
+    env:
+      SONAR_HOST_URL: "https://sonarcloud.io"  # Change to http://localhost:9000 if self-hosted
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Secure token from GitHub Secrets
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4  # Clones the repository
+        uses: actions/checkout@v4
 
-      - name: Display OS Information
-        run: echo "Running on ${{ runner.os }}"
-
-      - name: Set Up Node.js
-        uses: actions/setup-node@v4
+      - name: Install Java (Required for Sonar Scanner)
+        uses: actions/setup-java@v3
         with:
-          node-version: '20'  # Use Node.js v20
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Verify Node.js & NPM Version
-        run: node -v && npm -v
+      - name: Install Sonar Scanner (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          wget -O sonar-scanner.zip "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip"
+          unzip sonar-scanner.zip -d $HOME/
+          echo "$HOME/sonar-scanner-5.0.1.3006-linux/bin" >> $GITHUB_PATH
 
+      - name: Install Sonar Scanner (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          Invoke-WebRequest -Uri "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-windows.zip" -OutFile "sonar.zip"
+          Expand-Archive -Path "sonar.zip" -DestinationPath "C:\sonar-scanner"
+          echo "C:\sonar-scanner\sonar-scanner-5.0.1.3006-windows\bin" | Out-File -Append -Encoding ascii $env:GITHUB_PATH
+
+      - name: Run SonarQube Analysis
+        run: |
+          sonar-scanner \
+            -Dsonar.projectKey=zomato \
+            -Dsonar.projectName=ZomatoProject \
+            -Dsonar.organization=your-org-name  # Required for SonarCloud
+            -Dsonar.host.url=$SONAR_HOST_URL \
+            -Dsonar.token=$SONAR_TOKEN
