--- a/.github/workflows/zomato-ci.yaml
+++ b/.github/workflows/zomato-ci.yaml
@@ -1,30 +1,39 @@
-name: Zomato CI - Checkout & Setup Node.js
+name: Windows SonarQube Setup
 
 on:
   push:
     branches:
-      - feature-zomato  # Runs only when code is pushed to feature-zomato branch
+      - feature/**  # Runs on any feature branch
 
 jobs:
-  setup-node:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]  # Runs only on Linux & Windows
-
-    runs-on: ${{ matrix.os }}  # Dynamically selects Linux or Windows
+  sonar_scan:
+    runs-on: windows-latest  # Run on Windows
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4  # Clones the repository
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Display OS Information
-        run: echo "Running on ${{ runner.os }}"
-
-      - name: Set Up Node.js
-        uses: actions/setup-node@v4
+      - name: Set Up Java 17
+        uses: actions/setup-java@v3
         with:
-          node-version: '20'  # Use Node.js v20
+          distribution: 'adopt'
+          java-version: '17'
 
-      - name: Verify Node.js & NPM Version
-        run: node -v && npm -v
+      - name: Install SonarScanner on Windows
+        run: |
+          Invoke-WebRequest -Uri "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-windows.zip" -OutFile "sonar.zip"
+          Expand-Archive -Path "sonar.zip" -DestinationPath "C:\sonar-scanner"
+          echo "C:\sonar-scanner\sonar-scanner-5.0.1.3006-windows\bin" | Out-File -Append -Encoding ascii $env:GITHUB_PATH
 
+      - name: Verify SonarScanner Installation
+        run: sonar-scanner.bat -v
+
+      - name: Run SonarQube Scan
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          sonar-scanner.bat ^
+            -Dsonar.projectKey=zomato-1 ^
+            -Dsonar.projectName=ZomatoProject ^
+            -Dsonar.host.url=http://localhost:9000 ^
+            -Dsonar.token=%SONAR_TOKEN%
