high to medium scan

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
             # Create a cache directory for Trivy to speed up scans
             mkdir -p ~/.cache/trivy
             # Scan the image, fail on CRITICAL or HIGH vulnerabilities
-            trivy image --exit-code 1 --severity CRITICAL,HIGH --no-progress \
+            trivy image --exit-code 1 --severity CRITICAL,MEDIUM --no-progress \
               --cache-dir ~/.cache/trivy $DOCKERHUB_USERNAME/zomato_clone:latest
       - run:
           name: Install Docker Scout
@@ -78,7 +78,7 @@ jobs:
           name: Scan Docker Image with Docker Scout
           command: |
             # Scan the image, fail on CRITICAL or HIGH vulnerabilities
-            docker-scout cves $DOCKERHUB_USERNAME/zomato_clone:latest --exit-code --only-severity critical,high
+            docker-scout cves $DOCKERHUB_USERNAME/zomato_clone:latest --exit-code --only-severity critical,medium
       - run:
           name: Push Docker Image
           command: |
